--- a/home.html
+++ b/home.html
@@ -12,7 +12,11 @@
 
     <title>Jumbotron Template for Bootstrap</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Magra:700' rel='stylesheet' type='text/css'>
+    <!-- Google Font -->
+    <link href='http://fonts.googleapis.com/css?family=Palanquin' rel='stylesheet' type='text/css'>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,12 +46,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="images/main_logo.png" alt="Aliya Scribner" title="Aliya Scribner"</a>
+          <a class="navbar-brand" href="#"><img src="images/top_logo.png" alt="Aliya Scribner" title="Aliya Scribner"</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">ABOUT ME</a></li>
-            <li><a href="#portfolio">MY PORTFOLIO</a></li>
+            <li><a href="#portfolio">SKILLS PORTFOLIO</a></li>
             <li><a href="#contact">GET IN TOUCH</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -59,37 +63,62 @@
     <div class="jumbotron">
       <div class="container">
         <h1>I Take Action <br>To Achieve My Goals<br> Overcoming Any Obstacles In My Way</h1>
-        <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to write 1,000,000 lines of code_</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
         <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
+
+    <div id="about-me">
+      <div class="container homepage">
+        <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
+        <h2>About me</h2>
+        <hr>
+        <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
+      </div>
+    </div>
+
+    <div class="container homepage">
+      <h2>Portfolio</h2>
+      <hr>
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-square-o fa-stack-2x"></i>
+            <i class="fa fa-desktop fa-stack-1x"></i>
+          </span>
+          <h3>Project 1</h3>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-square-o fa-stack-2x"></i>
+            <i class="fa fa-desktop fa-stack-1x"></i>
+          </span>
+          <h3>Project 2</h3>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-square-o fa-stack-2x"></i>
+            <i class="fa fa-desktop fa-stack-1x"></i>
+          </span>
+          <h3>Project 3</h3>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
+          </div>
         </div>
-      </div>
+      </div> <!-- /container -->
+    </div>
 
-      <hr>
+    <hr>
 
-      <footer>
-        <p>&copy; Company 2014</p>
-      </footer>
-    </div> <!-- /container -->
+    <footer>
+      <p>&copy; Company 2014</p>
+    </footer>
+
 
 
     <!-- Bootstrap core JavaScript
