--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Google Font -->
-    <link href='http://fonts.googleapis.com/css?family=Palanquin' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
@@ -46,18 +46,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="images/top_logo.png" alt="Aliya Scribner" title="Aliya Scribner"</a>
+          <!-- <a class="navbar-brand" href="#">Project name</a> -->
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav .navbar-right">
             <li><a href="#">ABOUT ME</a></li>
-            <li><a href="#portfolio">SKILLS PORTFOLIO</a></li>
+            <li><a href="#about">SKILLS PORTFOLIO</a></li>
             <li><a href="#contact">GET IN TOUCH</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
@@ -65,16 +64,6 @@
         <h1>I Take Action <br>To Achieve My Goals<br> Overcoming Any Obstacles In My Way</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
         <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
-
-
-    <div id="about-me">
-      <div class="container homepage">
-        <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
-        <h2>About me</h2>
-        <hr>
-        <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
       </div>
     </div>
 
@@ -113,10 +102,19 @@
       </div> <!-- /container -->
     </div>
 
+    <div id="about-me">
+      <div class="container homepage">
+        <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
+        <h2>About me</h2>
+        <hr>
+        <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
+      </div>
+    </div>
+
     <hr>
 
     <footer>
-      <p>&copy; Company 2014</p>
+      <p>&copy; 2015 CODED BY ALIYA SCRIBNER!</p>
     </footer>
 
 
