--- a/home.html
+++ b/home.html
@@ -46,12 +46,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+           <!-- <a class="navbar-brand" href="#"><img src="images/test_logo2.png" alt="Aliya Scribner" title="Aliya Scribner"</a> -->
+        </div>
           <!-- <a class="navbar-brand" href="#">Project name</a> -->
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav .navbar-right">
-            <li><a href="#">ABOUT ME</a></li>
-            <li><a href="#about">SKILLS PORTFOLIO</a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#about-me">ABOUT ME</a></li>
+            <li><a href="#skills_portfolio">SKILLS PORTFOLIO</a></li>
             <li><a href="#contact">GET IN TOUCH</a></li>
           </ul>
         </div><!--/.nav-collapse -->
