--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Google Font -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700' rel='stylesheet' type='text/css'>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
@@ -53,7 +53,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#about-me">ABOUT ME</a></li>
-            <li><a href="#skills_portfolio">SKILLS PORTFOLIO</a></li>
+            <li><a href="#skills-portfolio">SKILLS PORTFOLIO</a></li>
             <li><a href="#contact">GET IN TOUCH</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -63,60 +63,67 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>I Take Action <br>To Achieve My Goals<br> Overcoming Any Obstacles In My Way</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, </p>
-        <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1>Coding Empowers Me</h1>
+        <p><a class="btn btn-default btn-lg" href="#" role="button">Contact Me &raquo;</a></p>
       </div>
     </div>
 
-    <div class="container homepage">
-      <h2>Portfolio</h2>
-      <hr>
-      <div class="row">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-square-o fa-stack-2x"></i>
-            <i class="fa fa-desktop fa-stack-1x"></i>
-          </span>
-          <h3>Project 1</h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-square-o fa-stack-2x"></i>
-            <i class="fa fa-desktop fa-stack-1x"></i>
-          </span>
-          <h3>Project 2</h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-square-o fa-stack-2x"></i>
-            <i class="fa fa-desktop fa-stack-1x"></i>
-          </span>
-          <h3>Project 3</h3>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
+     <div id="content-block">
+      <div class="container homepage">
+        <p>The temptation to do more in terms of quality, creativity, and functionality just never stops!</p>
+      </div>
+    </div>
+
+    <div id="skills-portfolio">
+      <div class="container homepage">
+        <h2>Skills Portfolio</h2>
+        <hr>
+        <div class="row">
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-square-o fa-stack-2x"></i>
+              <i class="fa fa-desktop fa-stack-1x"></i>
+            </span>
+            <h3>Project 1</h3>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
           </div>
-        </div>
-      </div> <!-- /container -->
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-square-o fa-stack-2x"></i>
+              <i class="fa fa-desktop fa-stack-1x"></i>
+            </span>
+            <h3>Project 2</h3>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
+         </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-square-o fa-stack-2x"></i>
+              <i class="fa fa-desktop fa-stack-1x"></i>
+            </span>
+            <h3>Project 3</h3>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
+            </div>
+          </div>
+        </div> <!-- /container -->
+      </div>
     </div>
 
     <div id="about-me">
       <div class="container homepage">
+        <h2>About Me</h2>
         <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
-        <h2>About me</h2>
         <hr>
         <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
       </div>
     </div>
 
-    <hr>
-
     <footer>
-      <p>&copy; 2015 CODED BY ALIYA SCRIBNER!</p>
+      <div class="container">
+        <p>&copy; 2015 CODED BY ALIYA SCRIBNER!</p>
+      </div>
     </footer>
 
 
@@ -130,3 +137,4 @@
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
+
