--- a/home.html
+++ b/home.html
@@ -64,11 +64,11 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Coding Empowers Me</h1>
-        <p><a class="btn btn-default btn-lg" href="#" role="button">Contact Me &raquo;</a></p>
+        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Contact Me &raquo;</a></p> -->
       </div>
     </div>
 
-     <div id="content-block">
+    <div id="content-block">
       <div class="container homepage">
         <p>The temptation to do more in terms of quality, creativity, and functionality just never stops!</p>
       </div>
@@ -107,18 +107,19 @@
             <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
             </div>
           </div>
-        </div> <!-- /container -->
       </div>
     </div>
 
     <div id="about-me">
       <div class="container homepage">
         <h2>About Me</h2>
-        <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
         <hr>
+        <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
         <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
+        <p><a class="btn btn-default btn-lg" href="#" role="button">Contact Me &raquo;</a></p>
       </div>
     </div>
+  </div> <!-- /container -->
 
     <footer>
       <div class="container">
