--- a/home.html
+++ b/home.html
@@ -123,6 +123,15 @@
 
     <footer>
       <div class="container">
+        <a href="http://github.com/dev814" target="blank">
+        <i class="fa fa-github fa-2x"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/dev814" target="blank">
+        <i class="fa fa-linkedin fa-2x"></i>
+        </a>
+        <a href="https://twitter.com/aliyascribner" target="blank">
+        <i class="fa fa-twitter fa-2x"></i>
+        </a>
         <p>&copy; 2015 CODED BY ALIYA SCRIBNER!</p>
       </div>
     </footer>
