--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 
     <div id="content-block">
       <div class="container homepage">
-        <p>The temptation to do more in terms of quality, creativity, and functionality just never stops!</p>
+        <p>For me, the temptation to do more in terms of quality, creativity, and functionality just never stops!</p>
       </div>
     </div>
 
@@ -116,7 +116,7 @@
         <hr>
         <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
         <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
-        <p><a class="btn btn-default btn-lg" href="#" role="button">Contact Me &raquo;</a></p>
+        <p><a class="btn btn-default btn-lg" href="#" role="button">Resume &raquo;</a></p>
       </div>
     </div>
   </div> <!-- /container -->
