--- a/home.html
+++ b/home.html
@@ -63,8 +63,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Coding Empowers Me</h1>
-        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Contact Me &raquo;</a></p> -->
+        <h1>CODING EMPOWERS ME</h1>
+        <p><a class="btn btn-success btn-lg" href="#" role="button">Contact Me &raquo;</a></p>
       </div>
     </div>
 
