--- a/home.html
+++ b/home.html
@@ -46,9 +46,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-           <!-- <a class="navbar-brand" href="#"><img src="images/test_logo2.png" alt="Aliya Scribner" title="Aliya Scribner"</a> -->
         </div>
-          <!-- <a class="navbar-brand" href="#">Project name</a> -->
+          <!-- <a class="navbar-brand" href="#">Aliya Scribner</a> -->
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -63,7 +62,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>CODING EMPOWERS ME</h1>
+        <h1>Coding makes me feel creative</br>EMPOWERED</br>and confident.<span classEMPOWERS ME</h1>
         <p><a class="btn btn-success btn-lg" href="#" role="button">Contact Me &raquo;</a></p>
       </div>
     </div>
@@ -84,7 +83,7 @@
               <i class="fa fa-square-o fa-stack-2x"></i>
               <i class="fa fa-desktop fa-stack-1x"></i>
             </span>
-            <h3>Project 1</h3>
+            <h3>Ruby on Rails</h3>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
           </div>
@@ -93,7 +92,7 @@
               <i class="fa fa-square-o fa-stack-2x"></i>
               <i class="fa fa-desktop fa-stack-1x"></i>
             </span>
-            <h3>Project 2</h3>
+            <h3>JavaScript & Angular</h3>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
          </div>
