--- a/home.html
+++ b/home.html
@@ -47,9 +47,10 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-          <!-- <a class="navbar-brand" href="#">Aliya Scribner</a> -->
+
         </div>
         <div id="navbar" class="collapse navbar-collapse">
+          <h2><a class="navbar-brand" href="#">Aliya Scribner</a></h2>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#about-me">ABOUT ME</a></li>
             <li><a href="#skills-portfolio">SKILLS PORTFOLIO</a></li>
@@ -62,8 +63,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Coding makes me feel creative</br>EMPOWERED</br>and confident.<span classEMPOWERS ME</h1>
-        <p><a class="btn btn-success btn-lg" href="#" role="button">Contact Me &raquo;</a></p>
+        <h1>Coding allows me to feel creative</br><span class="emphasis">EMPOWERED</span>and</br>confident.<span classEMPOWERS ME</h1>
+       <!--  <p><a class="btn btn-success btn-lg" href="#" role="button">Contact Me &raquo;</a></p> -->
       </div>
     </div>
 
@@ -101,7 +102,7 @@
               <i class="fa fa-square-o fa-stack-2x"></i>
               <i class="fa fa-desktop fa-stack-1x"></i>
             </span>
-            <h3>Project 3</h3>
+            <h3>Python & Django</h3>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
             </div>
@@ -115,7 +116,7 @@
         <hr>
         <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
         <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
-        <p><a class="btn btn-default btn-lg" href="#" role="button">Resume &raquo;</a></p>
+        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Resume &raquo;</a></p> -->
       </div>
     </div>
   </div> <!-- /container -->
