--- a/home.html
+++ b/home.html
@@ -103,18 +103,24 @@
               <i class="fa fa-desktop fa-stack-1x"></i>
             </span>
             <h3>Python & Django</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet</p>
             <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
             </div>
           </div>
       </div>
     </div>
 
+    <div id="stack">
+      <div class="container homepage">
+        <p>Here are the <span class="emphasis">technologies</span> I've used to build things.</p>
+      </div>
+    </div>
+  </div>
+
     <div id="about-me">
       <div class="container homepage">
         <h2>About Me</h2>
-        <hr>
-        <img src="images/as_winter.jpg" alt="Me" title="Me" class="img-circle">
+        <img src="images/main_hero_test1.jpg" alt="Me" title="Me" class="img-circle">
         <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
         <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Resume &raquo;</a></p> -->
       </div>
@@ -132,7 +138,7 @@
         <a href="https://twitter.com/aliyascribner" target="blank">
         <i class="fa fa-twitter fa-2x"></i>
         </a>
-        <p>&copy; 2015 CODED BY ALIYA SCRIBNER!</p>
+        <p>Copyright &copy; 2015 | ALIYA SCRIBNER</p>
       </div>
     </footer>
 
