--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Aliya Scribner</title>
 
     <!-- Google Font -->
     <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700' rel='stylesheet' type='text/css'>
@@ -63,14 +63,17 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Coding allows me to feel creative</br><span class="emphasis">EMPOWERED</span> and</br>confident.<span classEMPOWERS ME</h1>
+        <h1>Coding allows me to feel creative,</br><span class="emphasis">EMPOWERED,</span> and</br>confident.<span classEMPOWERS ME</h1>
        <!--  <p><a class="btn btn-success btn-lg" href="#" role="button">Contact Me &raquo;</a></p> -->
       </div>
     </div>
 
-    <div id="content-block">
+     <div id="about-me">
       <div class="container homepage">
-        <p>For me, the temptation to do more in terms of quality, creativity, and functionality just never stops!</p>
+        <h2>About Me</h2>
+        <img src="images/main_hero_test1.jpg" alt="Me" title="Me" class="img-circle">
+        <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
+        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Resume &raquo;</a></p> -->
       </div>
     </div>
 
@@ -110,39 +113,32 @@
       </div>
     </div>
 
-    <div id="stack">
+     <div id="content-block">
+      <div class="container homepage">
+        <p>For me, the temptation to do more in terms of quality, originality, and functionality just never stops!</p>
+      </div>
+    </div>
+
+    <div id="resume">
+      <div class="container homepage">
+        <p>Wanna see my resume?</p>
+        <p><a class="btn btn-default" href="mailto:aliya.scribner@gmail.com" role="button">Contact Me</a></p>
+      </div>
+    </div>
+
+    <div id="my-stack">
       <div class="container homepage">
         <p>Here are the <span class="emphasis">technologies</span> I've used to build things.</p>
       </div>
     </div>
-  </div>
 
-    <div id="about-me">
-      <div class="container homepage">
-        <h2>About Me</h2>
-        <img src="images/main_hero_test1.jpg" alt="Me" title="Me" class="img-circle">
-        <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
-        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Resume &raquo;</a></p> -->
-      </div>
-    </div>
   </div> <!-- /container -->
 
     <footer>
       <div class="container">
-        <a href="http://github.com/dev814" target="blank">
-        <i class="fa fa-github fa-2x"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/dev814" target="blank">
-        <i class="fa fa-linkedin fa-2x"></i>
-        </a>
-        <a href="https://twitter.com/aliyascribner" target="blank">
-        <i class="fa fa-twitter fa-2x"></i>
-        </a>
-        <p>Copyright &copy; 2015 | ALIYA SCRIBNER</p>
+        <p>&copy; 2015 | ALIYA SCRIBNER.</p>
       </div>
     </footer>
-
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -151,6 +147,7 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
   </body>
 </html>
 
