--- a/home.html
+++ b/home.html
@@ -121,7 +121,7 @@
 
     <div id="resume">
       <div class="container homepage">
-        <p>Wanna see my resume?</p>
+        <p>Wanna view my resume?</p>
         <p><a class="btn btn-default" href="mailto:aliya.scribner@gmail.com" role="button">Contact Me</a></p>
       </div>
     </div>
