--- a/home.html
+++ b/home.html
@@ -10,16 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Aliya Scribner</title>
-
-    <!-- Google Font -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700' rel='stylesheet' type='text/css'>
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-
-    <!-- Devicon -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/89f2f44ba07ea3fff7e561c2142813b278c2d6c6/devicon.min.css">
+    <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -49,14 +40,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        </div>
-
+          <a class="navbar-brand" href="#">Aliya Scribner</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <h2><a class="navbar-brand" href="#">Aliya Scribner</a></h2>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about-me">ABOUT ME</a></li>
-            <li><a href="#skills-portfolio">SKILLS PORTFOLIO</a></li>
+            <li><a href="#skills">SKILLS PORTFOLIO</a></li>
+            <li><a href="#about">ABOUT ME</a></li>
             <li><a href="#contact">GET IN TOUCH</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -66,92 +55,45 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Coding allows me to feel creative,</br><span class="emphasis">EMPOWERED,</span> and</br>confident.<span classEMPOWERS ME</h1>
-       <!--  <p><a class="btn btn-success btn-lg" href="#" role="button">Contact Me &raquo;</a></p> -->
+        <h1>Coding allows me to feel creative,</br><span class="emphasis">EMPOWERED,</span> and</br>confident.
+        <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
 
-     <div id="about-me">
-      <div class="container homepage">
-        <h2>About Me</h2>
-        <img src="images/main_hero_test1.jpg" alt="Me" title="Me" class="img-circle">
-        <p>I studied Instructional Technology and worked as a Teacher of children, but I took a <strong>Web Development</strong> Internship to learn more. Now I can <strong>code</strong> and create my ideas using HTML, CSS, JavaScript, Ruby, Rails, Python and SQL.</p>
-        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Resume &raquo;</a></p> -->
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
       </div>
-    </div>
 
-    <div id="skills-portfolio">
-      <div class="container homepage">
-        <h2>Skills Portfolio</h2>
-        <hr>
-        <div class="row">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-square-o fa-stack-2x"></i>
-              <i class="fa fa-desktop fa-stack-1x"></i>
-            </span>
-            <h3>Ruby on Rails</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-square-o fa-stack-2x"></i>
-              <i class="fa fa-desktop fa-stack-1x"></i>
-            </span>
-            <h3>JavaScript & Angular</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
-         </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-square-o fa-stack-2x"></i>
-              <i class="fa fa-desktop fa-stack-1x"></i>
-            </span>
-            <h3>Python & Django</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet</p>
-            <p><a class="btn btn-default" href="#" role="button">Let's See &raquo;</a></p>
-            </div>
-          </div>
-      </div>
-    </div>
+      <hr>
 
-     <div id="content-block">
-      <div class="container homepage">
-        <p>For me, the temptation to do more in terms of quality, originality, and functionality just never stops!</p>
-      </div>
-    </div>
+      <footer>
+        <p>&copy; Company 2014</p>
+      </footer>
+    </div> <!-- /container -->
 
-    <div id="resume">
-      <div class="container homepage">
-        <p>Wanna view my resume?</p>
-        <p><a class="btn btn-default" href="mailto:aliya.scribner@gmail.com" role="button">Contact Me</a></p>
-      </div>
-    </div>
-
-    <div id="my-stack">
-      <div class="container homepage">
-        <p>Here are the <span class="emphasis">technologies</span> I've used to build things.</p>
-        <i class="devicon-css3-plain"></i>
-      </div>
-    </div>
-
-  </div> <!-- /container -->
-
-    <footer>
-      <div class="container">
-        <p>&copy; 2015 | ALIYA SCRIBNER.</p>
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
   </body>
 </html>
-
