--- a/home.html
+++ b/home.html
@@ -12,6 +12,9 @@
 
     <title>Jumbotron Template for Bootstrap</title>
 
+    <!-- Google Font -->
+    <link href='http://fonts.googleapis.com/css?family=Hind:300,700,500' rel='stylesheet' type='text/css'>
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
