--- a/home.html
+++ b/home.html
@@ -58,8 +58,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Coding allows me to feel creative,</br><span class="emphasis">EMPOWERED,</span> and</br>confident.
-        <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1>Coding allows me</br> to feel creative,</br><span class="emphasis">EMPOWERED,</span> and</br>confident.
+        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
+        <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
       </div>
     </div>
 
