--- a/home.html
+++ b/home.html
@@ -15,6 +15,9 @@
     <!-- Google Font -->
     <link href='http://fonts.googleapis.com/css?family=Hind:300,700,500' rel='stylesheet' type='text/css'>
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -50,6 +53,10 @@
             <li><a href="#skills">SKILLS PORTFOLIO</a></li>
             <li><a href="#about">ABOUT ME</a></li>
             <li><a href="#contact">GET IN TOUCH</a></li>
+            <li><span class="fa-stack fa-lg">
+              <i class="fa fa-square-o fa-stack-2x"></i>
+              <i class="fa fa-github fa-stack-1x"></i>
+            </span></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -59,8 +66,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Coding allows me</br> to feel creative,</br><span class="emphasis">EMPOWERED,</span> and</br>confident.
-        <!-- <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
-        <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+        <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
 
