fixed social media buttons

--- a/home.html
+++ b/home.html
@@ -53,10 +53,9 @@
             <li><a href="#skills">SKILLS PORTFOLIO</a></li>
             <li><a href="#about">ABOUT ME</a></li>
             <li><a href="#contact">GET IN TOUCH</a></li>
-            <li><span class="fa-stack fa-lg">
-              <i class="fa fa-square-o fa-stack-2x"></i>
-              <i class="fa fa-github fa-stack-1x"></i>
-            </span></li>
+            <li><i class="fa fa-github fa-2x"></i></li>
+            <li><i class="fa fa-linkedin fa-2x"></i></li>
+            <li><i class="fa fa-twitter fa-2x"></i></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
